# aetherforge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  database.py  logging_config.py  main.py
app/api/: dependencies.py
app/api/middleware/: __init__.py  auth.py  csrf.py  rate_limit.py
app/api/routes/: audit.py  dashboard.py  drift.py  findings.py  health.py  metrics.py  personas.py  reports.py  rules.py  scans.py  targets.py  tools.py
app/core/: __init__.py  command_generator.py  drift_detector.py  evasion.py  exceptions.py  orchestrator.py  persona_engine.py  state_machine.py
app/core/rule_engine/: __init__.py  contract.py  dsl.py  engine.py  loader.py  schema.py
app/executor/: __init__.py  artifacts.py  docker_executor.py  msf_executor.py  rate_limiter.py  sandbox.py
app/kb/: __init__.py  builtin.py  loader.py  lookup.py  msf_modules.py
app/models/: __init__.py  audit.py  base.py  drift.py  enums.py  execution.py  fact.py  finding.py  knowledge_base.py  persona.py  rule.py  scan.py  target.py
app/parsers/: __init__.py  ffuf_json.py  generic_text.py  httpx_jsonl.py  nmap_xml.py  nuclei_jsonl.py  subfinder.py
app/repositories/: __init__.py  rule.py  target.py
app/schemas/: __init__.py  common.py  fact.py  finding.py  rule.py  scan.py  target.py
app/services/: __init__.py  drift_detector.py  metasploit_rpc.py  reporter.py  temporal_orchestrator.py  wazuh_client.py
app/tools/: __init__.py  base.py  registry.py  registry_loader.py
app/tools/wrappers/: __init__.py  amass.py  ffuf.py  httpx.py  masscan.py  metasploit.py  nettacker.py  nikto.py  nmap.py  nuclei.py  openvas.py  sqlmap.py  subfinder.py  wapiti.py
app/ui/: __init__.py
app/utils/: __init__.py  parsers.py  secrets.py  security.py  validators.py
app/workflows/: __init__.py  autonomous_scan.py  continuous_monitor.py  data.py  runtime.py  worker.py
app/workflows/activities/: __init__.py  audit.py  cleanup.py  drift.py  evaluate.py  execute.py  lifecycle.py  monitor.py  observe.py  persist.py  wazuh.py
configs/: personas.yaml  targets.yaml  tools.yaml
configs/temporal/: aetherforge.yaml
docker/orchestrator/: Dockerfile  entrypoint.sh
docker/tools/amass/: Dockerfile
docker/tools/ffuf/: Dockerfile
docker/tools/httpx/: Dockerfile
docker/tools/masscan/: Dockerfile
docker/tools/metasploit/: Dockerfile  entrypoint.sh
docker/tools/nettacker/: Dockerfile
docker/tools/nikto/: Dockerfile
docker/tools/nmap/: Dockerfile
docker/tools/nuclei/: Dockerfile
docker/tools/openvas/: Dockerfile
docker/tools/sqlmap/: Dockerfile
docker/tools/subfinder/: Dockerfile
docker/tools/wapiti/: Dockerfile
docker/worker/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md  RUNBOOK.md
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 2026_04_17_1648-83d0090e0d63_initial_schema_phase1.py  2026_04_18_0319-3bfc211405ff_fact_dedup_constraint.py  2026_04_18_0352-a15613e25129_target_replica_only_flag.py  2026_04_18_0413-b366c4ba184a_finding_triage_notes.py
rules/black_hat/: r_exfil_simulation.yaml  r_exploit_metasploit_auto.yaml  r_exploit_msf_portscan_safe.yaml  r_exploit_sqlmap_full.yaml  r_postexploit_enum.yaml
rules/gray_hat/: r_enum_ffuf_dirs.yaml  r_exploit_sqlmap_safe.yaml  r_recon_httpx_from_banner.yaml  r_scan_nettacker.yaml  r_scan_nmap_deep.yaml  r_scan_nmap_discovery.yaml  r_vuln_nikto_web.yaml  r_vuln_nuclei_auto.yaml
rules/white_hat/: r_recon_amass_passive.yaml  r_recon_dns_a_record.yaml  r_recon_http_probe.yaml  r_recon_subfinder_seed.yaml  r_recon_tls_info.yaml
scripts/: __init__.py  audit_tail.py  e2e_smoke.sh  healthcheck.py  init_db.py  postgres-init.sql  seed_knowledge_base.py  seed_rules.py  validate_rules.py
static/css/: app.css  input.css  main.css
templates/: base.html
templates/pages/: audit.html  drift.html  drift_detail.html  findings.html  index.html  login.html  rule_detail.html  rules.html  scan_detail.html  scan_new.html  scans.html  target_new.html  targets.html  tools.html
templates/partials/: audit_rows.html  metrics.html  pager.html  scans_rows.html
templates/reports/: scan_report.html
tests/: conftest.py
tests/integration/: test_live_api.py
tests/unit/: test_artifacts.py  test_auth_middleware.py  test_command_generator.py  test_config.py  test_csrf_middleware.py  test_drift_detector.py  test_evasion.py  test_health.py  test_httpx_parser.py  test_kb.py  test_login_flow.py  test_msf_executor.py  test_msf_module_map.py  test_nmap_parser.py  test_nuclei_parser.py  test_persona_overlay.py  test_rate_limit.py  test_rate_limiter.py  test_replica_only_guard.py  test_reporter.py  test_routes_smoke.py  test_rule_dsl.py  test_rule_engine.py  test_rule_loader.py  test_rule_schema.py  test_sandbox.py  test_scope.py  test_secrets.py  test_session_fixation.py  test_state_machine.py  test_subfinder_parser.py  test_tool_registry.py  test_updated_at_listener.py  test_wazuh_client.py  test_workflow_data.py  test_workflow_imports.py
