[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "aetherforge"
version = "0.1.0"
description = "Autonomous zero-AI VAPT + cyber defense orchestrator"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "AetherForge" }]
keywords = [
  "vapt", "pentest", "security", "automation", "offensive",
  "temporal", "redteam", "purple-team", "soar",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

dependencies = [
  # --- Web framework -------------------------------------------------------
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "gunicorn>=23.0.0",
  "httpx>=0.27.2",
  "python-multipart>=0.0.17",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.4",

  # --- Data models ---------------------------------------------------------
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "sqlmodel>=0.0.22",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "psycopg[binary]>=3.2.3",

  # --- Queue + broker ------------------------------------------------------
  "redis>=5.2.0",
  "rq>=2.0.0",

  # --- Workflow engine -----------------------------------------------------
  "temporalio>=1.9.0",

  # --- Security tooling integrations --------------------------------------
  "pymetasploit3>=1.0.3",          # Metasploit RPC
  "python-libnmap>=0.7.3",         # Nmap XML parser
  "python-nmap>=0.7.1",
  "defusedxml>=0.7.1",
  "pyOpenSSL>=24.2.1",
  "cryptography>=43.0.3",

  # --- Container control --------------------------------------------------
  "docker>=7.1.0",

  # --- Parsers / formats --------------------------------------------------
  "PyYAML>=6.0.2",
  "orjson>=3.10.11",
  "jsonschema>=4.23.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",

  # --- Reporting ----------------------------------------------------------
  "weasyprint>=63.0",
  "markdown>=3.7",

  # --- Utilities ----------------------------------------------------------
  "structlog>=24.4.0",
  "rich>=13.9.4",
  "typer>=0.13.0",
  "tenacity>=9.0.0",
  "python-dotenv>=1.0.1",
  "cidrize>=3.0.0",
  "netaddr>=1.3.0",
  "tldextract>=5.1.3",
  "ulid-py>=1.1.0",
  "packaging>=24.2",

  # --- Observability ------------------------------------------------------
  "prometheus-client>=0.21.0",
  "opentelemetry-api>=1.28.2",
  "opentelemetry-sdk>=1.28.2",
  "opentelemetry-instrumentation-fastapi>=0.49b2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.27.2",
  "respx>=0.21.1",
  "ruff>=0.7.4",
  "black>=24.10.0",
  "mypy>=1.13.0",
  "types-PyYAML>=6.0.12.20240917",
  "types-redis>=4.6.0.20241004",
  "ipython>=8.29.0",
]

[project.scripts]
aetherforge = "app.cli:app"

# ---------------------------------------------------------------------------
# Tooling config
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle + pyflakes
  "I",                 # isort
  "B",                 # flake8-bugbear
  "UP",                # pyupgrade
  "C4",                # comprehensions
  "SIM",               # simplify
  "S",                 # bandit (security)
  "ASYNC",             # async best-practices
  "PL",                # pylint subset
  "RUF",               # ruff-specific
]
ignore = [
  "S101",              # assert (pytest uses it)
  "PLR0913",           # too many args (rule engine needs them)
  "B008",              # fastapi.Query / typer.Option in defaults — by design
  "ASYNC109",          # ``timeout`` kwarg is OK in our healthcheck script
  "PLC0415",           # nested imports OK for lazy / cycle-breaking loads
  "S110",              # try-except-pass — we log via __import__('logging')
  "S108",              # /tmp paths inside Docker sandboxes are intentional
  "PLR2004",           # magic numbers (rate limits, ports, timeouts)
  "E501",              # long lines — see .editorconfig
  "E701",              # one-line ``except X: pass`` is intentional in cleanup paths
  "PLR0911", "PLR0912", "PLR0915",  # high-arity command-gen + workflow methods
  "PLW0603",           # database.py + temporal_orchestrator.py module-level cache
  "RUF001", "RUF002", "RUF003",     # unicode dashes / × in docs are intentional
  "RUF100",            # leave noqa hygiene for the next sweep
  "S501",              # WazuhClient verify=False — self-signed cert by design
  "B027",              # ToolWrapper.validate_params is intentionally optional
  "SIM102",            # collapsing nested ifs hurts rule-engine readability
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004"]
"scripts/**" = ["S603", "S607"]  # subprocess — intentional here

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/versions"]

[[tool.mypy.overrides]]
module = ["pymetasploit3.*", "libnmap.*", "nmap.*", "rq.*", "cidrize.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
]
markers = [
  "unit: fast isolated tests",
  "integration: require infra (db/redis/temporal)",
  "slow: >5s tests",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
